code clean up update results